# mcp-server-sendemail

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: architecture.md  installation-guide.md  usage.md
scripts/: send_test_email.py
src/email_mcp/: __init__.py  client.py  config.py  server.py
tests/: test_client.py  test_config.py  test_server.py
